# tip-genius

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  conda.yaml  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: match-predictions.yaml  match_predictions.yaml  version-update.yaml
api/: predictions.js
public/: index.html  manifest.json  sw.js  version.json
public/js/: main.js
src/css/: styles.css
src/tip_genius/: api_data.py  llm_manager.py  storage_manager.py  tip_genius.py
src/tip_genius/cfg/: api_config.yaml  llm_config.yaml  tip_genius_config.yaml  vercel_config.yaml
src/tip_genius/lib/: api_data.py  llm_manager.py  llm_prompts.py  storage_manager.py  team_matching.py
tests/smoke/: test_tip_genius_workflow.py
utils/: eval_team_matching.py  process_team_logos.py  rename_team_logos.py
