[project]
name = "Tip-Genius"
version = "1.0.0"
description = "AI-powered soccer match predictions with a modern, responsive web interface."
readme = "README.md"
requires-python = ">= 3.12, < 3.13"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = [
    "tip_genius", 
    "lib" 
]
[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning"
pythonpath = [
  ".", "src", "tests",
]
